--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "angular-in-memory-web-api": "~0.3.0",
+    "angular2-google-maps": "^0.17.0",
     "core-js": "^2.4.1",
     "ng2-bs3-modal": "^0.10.4",
     "ng2-spin-kit": "^1.3.0",
