--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "angular-in-memory-web-api": "~0.3.0",
     "angular2-google-maps": "^0.17.0",
     "core-js": "^2.4.1",
+    "ng2-date-time-picker": "^4.0.0",
+    "ng2-flatpickr": "^0.1.14",
     "ng2-toastr": "^4.0.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
