--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "start": "node server.js",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
@@ -29,9 +28,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
+    "@angular/common": "^4.0.3",
+    "@angular/compiler": "^4.0.3",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/core": "^4.0.3",
     "@angular/forms": "~4.0.0",
     "@angular/http": "~4.0.0",
     "@angular/platform-browser": "~4.0.0",
