--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "node server.js",
     "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
     "lint": "tslint ./src/**/*.ts -t verbose",
+    "preinstall": "npm install -g angular-cli",
     "postinstall": "ng build --target=production -e ${NODE_ENV:-production} --aot"
   },
   "keywords": [],
