--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "serve": "lite-server -c=bs-config.json",
     "prestart": "npm run build",
     "start": "node server.js",
+    "pree2e": "npm run build:e2e",
+    "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
+    "preprotractor": "webdriver-manager update",
+    "protractor": "protractor protractor.config.js",
+    "pretest": "npm run build",
     "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
+    "pretest:once": "npm run build",
+    "test:once": "karma start karma.conf.js --single-run",
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "preinstall": "npm install -g angular-cli",
     "postinstall": "ng build --aot -prod"
   },
   "keywords": [],
