--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^4.0.0",
     "@types/node": "^6.0.73",
     "angular-in-memory-web-api": "~0.3.0",
+    "angular2-moment": "^1.3.3",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "ng2-flatpickr": "^0.1.14",
