--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.0.6",
+    "@angular/cli": "^1.2.6",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
@@ -32,6 +32,7 @@
     "ng2-flatpickr": "^0.1.14",
     "rich-marker": "0.0.1",
     "rxjs": "^5.1.0",
+    "typescript": "^2.4.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
