--- a/package.json
+++ b/package.json
@@ -5,37 +5,44 @@
   "license": "BSD 2-clause",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build"
+    "preinstall": "node env.js",
+    "postinstall": "ng build --prod --env=prod"
   },
   "private": true,
   "dependencies": {
     "@angular/cli": "^1.2.6",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^4.3.3",
+    "@angular/compiler": "^4.3.3",
+    "@angular/compiler-cli": "^4.3.3",
+    "@angular/core": "^4.3.3",
+    "@angular/forms": "^4.3.3",
+    "@angular/http": "^4.3.3",
+    "@angular/platform-browser": "^4.3.3",
+    "@angular/platform-browser-dynamic": "^4.3.3",
+    "@angular/router": "^4.3.3",
     "@types/node": "^6.0.73",
     "angular-in-memory-web-api": "~0.3.0",
     "angular2-moment": "^1.3.3",
+    "async": "latest",
     "core-js": "^2.4.1",
+    "env2": "^2.2.0",
     "express": "^4.15.3",
+    "gulp": "^3.9.1",
+    "gulp-ng-config": "^1.4.0",
+    "gulp-tsc": "^1.3.2",
+    "gulp-typescript": "^3.2.1",
     "ng2-flatpickr": "^0.1.14",
     "rich-marker": "0.0.1",
     "rxjs": "^5.1.0",
+    "tcs": "^10.0.0",
     "typescript": "^2.4.2",
     "zone.js": "^0.8.4",
-    "gulp": "^3.9.0",
-    "gulp-ng-config": "^1.2.1"
+    "fs-extra": "latest"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
