--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "BSD 2-clause",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "debug": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "preinstall": "node env.js",
-    "postinstall": "ng build --prod --env=prod"
+    "postinstall": "ng build --prod --env=prod && node ./build/generate-env.js",
+    "heroku-prebuild": "./build/export_env_dir.sh"
   },
   "private": true,
   "dependencies": {
@@ -30,19 +31,11 @@
     "angular2-moment": "^1.3.3",
     "async": "latest",
     "core-js": "^2.4.1",
-    "env2": "^2.2.0",
     "express": "^4.15.3",
-    "gulp": "^3.9.1",
-    "gulp-ng-config": "^1.4.0",
-    "gulp-tsc": "^1.3.2",
-    "gulp-typescript": "^3.2.1",
     "ng2-flatpickr": "^0.1.14",
     "rich-marker": "0.0.1",
     "rxjs": "^5.1.0",
-    "tcs": "^10.0.0",
-    "typescript": "^2.4.2",
-    "zone.js": "^0.8.4",
-    "fs-extra": "latest"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
@@ -59,7 +52,9 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "env2": "^2.2.0",
+    "fs-extra": "latest"
   },
   "engines": {
     "node": "7.10.0",
