--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "ng2-flatpickr": "^0.1.14",
     "rich-marker": "0.0.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "typescript": "~2.2.0"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "~2.0.0",clea
     "fs-extra": "^4.0.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
@@ -53,7 +54,8 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "uglify-js": "^2.8.29"
   },
   "engines": {
     "node": "7.10.0",
